a lot of changes, repair overflowww

--- a/src/styles/modules/_Knowledge.scss
+++ b/src/styles/modules/_Knowledge.scss
@@ -62,8 +62,9 @@
   }
 
   .frontend, .backend {
+    background-color: #fff;
     margin: 20px;
-    width: 35%;
+    width: 40%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.521);
     border-radius: 12px;
@@ -95,6 +96,7 @@
     }
 
     .frontend-container, .backend-container {
+
       display: flex;
       justify-content: center;
       text-align: center;
@@ -102,6 +104,7 @@
       color: white;
       font-size: 1.3rem;
       width: 100%;
+      padding-bottom: 10%;
 
       @media (max-width: 600px) {
         font-size: 1rem;
@@ -109,13 +112,13 @@
 
       .element {
 
-        width: 13vh;
+        width: 15vh;
         border-radius: 12px;
         border: 2px solid gray;
-        height: 13vh;
+        height: 15vh;
         margin: 12px;
         text-align: center;
-        line-height: 13vh;
+        line-height: 15vh;
         transition: .3s;
         text-shadow: 4px 4px 4px #777777;
 
